web/css/betterrecipes.css
/* ... */
#gallery .picture .picts img {
  float:left;
  width:300px;
  height:auto;
}
#gallery .marker,
.featured-gallery .marker {
  background:url(/img/btn-galleryarrow.png) no-repeat top left;
  width:15px;
  height:38px;
  position:absolute;
  top:10px;
  left:300px;
  z-index:20;
  left:304px\9;
}
#gallery ul {
  width:340px;
  float:right;
  font-size:18px;
  margin-top:10px;
}
#gallery ul li {
  margin-bottom:30px;
}
#gallery ul li a,
#gallery ul li a:link,
#gallery ul li a:hover,
#gallery ul li a:visited {
  color:#666!important;
  line-height:1.0em;
}
#gallery ul li a.current,
#gallery ul li a.current:link,
#gallery ul li a.current:hover,
#gallery ul li a.current:visited {
  color:#606!important;
}
/*-----
MAIN: breadcrumbs
-----*/
#breadcrumbs {
  height:27px;
  line-height:27px;
  padding-left:20px;
  width:980px;
  font-size:11px;
}
#breadcrumbs a {
  color:#660066;
}
#breadcrumbs .last {
  color:#666;
  text-decoration: none;
  cursor: default; 
}
/*-----
MAIN: popular groups & sponsored groups
-----*/
#popular-groups,
#sponsored-groups,
#my-friends,
#new-groups {
  width:100%;
  clear:both;
  margin-bottom:10px;
  position:relative;
}
#popular-groups ul,
#sponsored-groups ul,
.sidebar #my-groups ul,
#new-groups ul {
  margin-top:15px;
  line-height:1.1em;
  width: 680px;
}
#popular-groups ul li,
#sponsored-groups ul li,
#new-groups ul li {
  width:150px;
  float:left;
  display: inline;
  position:relative;
  z-index:1;
  margin:0 20px 10px 0;
}
#sponsored-groups ul li {
  padding-bottom:30px;
}
#popular-groups ul li.last,
#sponsored-groups ul li.last,
#new-groups ul li.last,
#popular-groups ul li:nth-child(4n+0),
#sponsored-groups ul li:nth-child(4n+0),
#new-groups ul li:nth-child(4n+0) {
  margin-right:0;
}
#popular-groups ul li p,
#sponsored-groups ul li p,
#new-groups ul li p {
  position:absolute;
  top:117px;
  left:6px;
  width:138px;
  z-index:20;
  font-size:13px;
}
#popular-groups ul li p span.name,
#sponsored-groups ul li p span.name,
#new-groups ul li p span.name {
  display: block;
  max-height: 1em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: ellipsis-word;
}
#popular-groups ul li p span.count,
#sponsored-groups ul li p span.count,
#new-groups ul li p span.count {
  font-size:11px;
}
#popular-groups ul li p a,
#sponsored-groups ul li p a,
#new-groups ul li p a {
  color:#FFF!important;
}
#popular-groups ul li p img,
#sponsored-groups ul li p img,
#new-groups ul li p img {
  float:right;
}
#popular-groups ul li div,
#sponsored-groups ul li div,
#new-groups ul li div {
  background-color:#74a500;
  width:100%;
  height:39px;
  position:absolute;
  left:0;
  top:111px;
  filter:alpha(opacity=90);   /* Internet Explorer       */
  -moz-opacity:0.9;           /* Mozilla 1.6 and below   */
  opacity: 0.9;               /* newer Mozilla and CSS-3 */
  z-index:10;
}
#sponsored-groups ul li .sponsor {
  font-size:11px;
  position:absolute;
  left:0;
  top:160px;
}
div#group_sponsor {
  /*position:relative;*/
  float:right;
}
/*
div#group_sponsor div.sponsor-container {
  position:absolute;
  top:-27px;
  left:535px;
}
*/

/*-----
MAIN: top discussions
&
SIDEBAR: recipes
-----*/
#top-discussions {
  float:left;
  width:300px;
  margin-right:40px;
}
#sidebar-recipes ul li p {
  height:40px;
  line-height:40px;
}
#sidebar-recipes ul li {
  border-bottom:#ebebeb solid 1px;
}
#featured-discussion span{
  font-size:13px;
}
/*-----
MAIN: today's poll
-----*/
#todays-poll {
  float:left;
}
#todays-poll a {
  color:#660066;
}
#todays-poll ul li {
  float:left;
  width:100px;
  margin-right:45px;
  margin-top: 20px;
}
#todays-poll ul li.last {
  margin-right:0;
}
#todays-poll ul li p {
  width:100%;
  text-align:center;
}

#todays-poll .rec_votebtn {
  margin:10px auto;
}
#todays-poll .rec_votebtn a.vote {
  padding:4px 6px;
  text-align:center;
  display:inline-block;
  background-color:#ebebeb;
  border-color:#e1e1e1 #c1c1c1 #a6a6a6 #b9b9b9;
  border-style:solid;
  border-width:1px;
  -moz-box-shadow: 1px 1px 0px #262626;
  -webkit-box-shadow: 1px 1px 0px #262626;
  box-shadow: 1px 1px 0px #262626;
}
#todays-poll .social_icons {
  width:320px;
  clear:both;
  padding:20px 0;
}
#todays-poll .social_icons .fb-like {
  margin-right:20px;
}
.poll_questions li {
  display: block;
  float: none;
  margin-bottom: 15px;
}
/*-----
MAIN: popular cooks & recent photos
-----*/
#popular-cooks,
#recent-photos {
  width:100%;
  clear:both;
}
#popular-cooks ul li,
.photoList ul li, 
#recent-photos ul li {
  float:left;
  width:100px;
  margin-right:20px;
}
#popular-cooks ul li.last,
#recent-photos ul li.last {
  margin-right:0;
}
ul li p a,
ul li p a {
  color:#660066;
  word-wrap: break-word
}
/*-----
MAIN: featured contests
-----*/
.article #featured-contest {
  background-color:#dae2c7;
  padding:20px 15px 20px 20px;
  width:285px;
  float:right;
  margin-top:40px;
  clear:right;
}
.article #featured-contest p {
  float:right;
  width:140px;
}
.article #featured-contest .purple {
  color:#660066;
  font-size:18px;
  line-height:1.5em;
}
.article #featured-contest img {
  float:left;
  margin:4px 20px 20px 4px;
  -moz-box-shadow: 0px 0px 4px #888;
  -webkit-box-shadow: 0px 0px 4px #888;
  box-shadow: 0px 0px 4px #888;
}
.article #featured-contest .cta {
  clear:both;
  float:none;
}
.article #featured-contest .cta a  {
  background:url(/img/bg-btn-purple-wide.png) no-repeat center bottom;
  width:265px;
  padding-top:5px;
}
.article .contest-winners ul li {
  width:100px;
}
/*-----
MAIN: editorials
-----*/
#editorials, #pop_stories {
  margin-top:40px;
}
#editorials > div{
  float:left;
  width:310px;
  margin-bottom:10px;
}
#pop_stories > div{
  float:left;
  width:285px;
  margin-bottom:10px;
}
#editorials img, #pop_stories img {
  float:left;
  margin:0 20px 20px 0;
}
#editorials ul,
#editorials p, #pop_stories p {
  margin-left:120px;
  margin-bottom:10px;
}
/* ... */

